# minesweeper

./: CMakeLists.txt  Makefile  README.md
src/: config.c  config.h  db.c  db.h  drawings.c  drawings.h  grid.c  grid.h  main.c  record.h  screen_gameplay.c  screen_high_score.c  screen_main_menu.c  screens.h  textures.c  textures.h
src/screens/: screen_gameplay.c  screen_main_menu.c  screens.h
